--- a/helper.css
+++ b/helper.css
@@ -2,6 +2,11 @@ li {
 	list-style-type: none;
 }
 
+/*img {
+	height: 100%;
+	width: 100%;
+}*/
+
 .head-menu {
 	padding: 0.3em;
 	vertical-align: middle;
@@ -153,5 +158,140 @@ li {
 
 .image-container-content a:nth-child(2) {
 	right: 2%;
+}
+
+.invisible-nav {
+	max-height: 100px;
+	height: 100px;
+	background-color: transparent;
+}
+
+.container {
+	max-width: 1170px;
+	margin: 0 auto;
+}
+
+.small-title {
+	text-align: center;
+	color: #f6ab4a;
+	font-family: Pacifico;
+}
+
+.col-content {
+	text-align: center;
+}
+
+.col-content img {
+	margin-bottom: 30px;
+	height: 100%;
+	width: 100%;
+}
+
+.col-content p {
+	color: #868080;
+	margin-bottom: 25px;
+	text-align: center;
+}
+
+.content h2{
+	font-size: 45px;
+}
+
+.content h5{
+	font-size: 25px;
+	margin: 0 0 15px;
+}
+
+.content h2,h5 {
+	text-align: center;
+	font-family: Fredoka One;
+}
+
+.button {
+	background-color:  #f6ab4a;
+	border-radius: 30px;
+	color: white;
+	padding: 1em 2em;
+	width: 33.33%;
+	text-align: center;
+	display: inline-block;
+	margin: 0 auto;
+	font-size: 12px;
+}
+
+
+
+
+
+.row:after {
+	content: "";
+	clear: both;
+	display: table;
+}
+
+
+
+/*Extra small*/
+@media (min-width: 320px){
+  .col-xs-1{width: 8.3333%;}
+  .col-xs-2{width: 16.6667%;}
+  .col-xs-3{width: 25%;}
+  .col-xs-4{width: 33.3333%;}
+  .col-xs-5{width: 41.6667%;}
+  .col-xs-6{width: 50%;}
+  .col-xs-7{width: 58.3333%;}
+  .col-xs-8{width: 66.6667%;}
+  .col-xs-9{width: 75%;}
+  .col-xs-10{width: 83.3333%;}
+  .col-xs-11{width: 91.6667%;}
+  .col-xs-12{width: 100%;}
+}
+
+/*Small*/
+@media (min-width: 480px){
+  .col-sm-1{width: 8.3333%;}
+  .col-sm-2{width: 16.6667%;}
+  .col-sm-3{width: 25%;}
+  .col-sm-4{width: 33.3333%;}
+  .col-sm-5{width: 41.6667%;}
+  .col-sm-6{width: 50%;}
+  .col-sm-7{width: 58.3333%;}
+  .col-sm-8{width: 66.6667%;}
+  .col-sm-9{width: 75%;}
+  .col-sm-10{width: 83.3333%;}
+  .col-sm-11{width: 91.6667%;}
+  .col-sm-12{width: 100%;}
+}
+
+/*Medium*/
+@media (min-width: 768px){
+  .col-md-1{width: 8.3333%;}
+  .col-md-2{width: 16.6667%;}
+  .col-md-3{width: 25%;}
+  .col-md-4{width: 33.3333%;}
+  .col-md-5{width: 41.6667%;}
+  .col-md-6{width: 50%;}
+  .col-md-7{width: 58.3333%;}
+  .col-md-8{width: 66.6667%;}
+  .col-md-9{width: 75%;}
+  .col-md-10{width: 83.3333%;}
+  .col-md-11{width: 91.6667%;}
+  .col-md-12{width: 100%;}
+}
+
+/*large*/
+@media (min-width: 992px){
+  .col-lg-1{width: 8.3333%;}
+  .col-lg-2{width: 16.6667%;}
+  .col-lg-3{width: 25%;}
+  .col-lg-4{width: 33.3333%;}
+  .col-lg-5{width: 41.6667%;}
+  .col-lg-6{width: 50%;}
+  .col-lg-7{width: 58.3333%;}
+  .col-lg-8{width: 66.6667%;}
+  .col-lg-9{width: 75%;}
+  .col-lg-10{width: 83.3333%;}
+  .col-lg-11{width: 91.6667%;}
+  .col-lg-12{width: 100%;}
 }
 
