--- a/helper.css
+++ b/helper.css
@@ -271,11 +271,86 @@ body {
 
 .content-block {
 	position: absolute;
-	height: 100%;
+	height: 40%;
 	width: 50%;
-	background-color: red;
-	top: 0;
+	top: 50%;
+	transform: translateY(-50%);
 	right: 0;
+	text-align: center;
+	display: flex;
+}
+
+.content-block li {
+	display: inline-block;
+	position: absolute;
+	flex-grow: 1;
+}
+
+.content-block .content-block-item:nth-child(2) {
+	background-image: url('./picture/product19_medium.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 30%;
+	height: 100%;
+}
+
+.content-block .content-block-item:nth-child(3) {
+	
+	text-align: center;
+	padding-left: 1em;
+
+}
+
+.content-block li:nth-child(1) {
+	left: 2%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.content-block li:nth-child(2) {
+	left: 20%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.content-block li:nth-child(3) {
+	left: 50%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.content-block li:nth-child(4) {
+	right: 10%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.content-block li:nth-child(1) .move-button:before {
+
+	content: "";
+	height: 10px;
+	width: 10px;
+	background-color: transparent;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	border-top: 1px solid white;
+	border-left: 1px solid white;
+	transform: translateY(-50%) translateX(-50%) rotate(-45deg);
+}
+
+.content-block li:nth-child(4) .move-button:before {
+
+	content: "";
+	height: 10px;
+	width: 10px;
+	background-color: transparent;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	border-top: 1px solid white;
+	border-right: 1px solid white;
+	transform: translateY(-50%) translateX(-50%) rotate(45deg);
 }
 
 
