--- a/helper.css
+++ b/helper.css
@@ -174,6 +174,8 @@ body {
 	margin-bottom: 25px;
 	margin-left: 0;
 	margin-right: 0;
+
+	position: relative;
 }
 
 .small-title {
@@ -196,7 +198,6 @@ body {
 
 .col-content img {
 	margin-bottom: 30px;
-	height: 100%;
 	width: 100%;
 }
 
@@ -225,7 +226,7 @@ body {
 	border-radius: 30px;
 	color: white;
 	padding: 1em 2em;
-	width: 33.33%;
+	max-width: 50%;
 	text-align: center;
 	display: inline-block;
 	margin: 0 auto;
@@ -393,7 +394,7 @@ body {
 
 .flex-7 {
 	flex-grow: 6;
-	margin-top: 3em;
+	margin-top: 5em;
 }
 
 
@@ -404,8 +405,9 @@ body {
 	position: absolute;
 	top: 0;
 	left: 50%;
-	transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-30%);
 	margin-bottom: 20px;
+	box-shadow: 0 5px 0 0 #7e4c4f;
 }
 
 .highlight-image>* {
@@ -413,10 +415,20 @@ body {
 }
 
 
+.active-col {
+	background-color: #f7f7f7;
+}
 
 .active-col:hover {
 	background-color: #f6ab4a;
-	position: relative;
+}
+
+.active-col:hover .button {
+	background-color: #7e4c4f;
+}
+
+.active-col>* {
+	margin-bottom: 1em;
 }
 
 
@@ -424,6 +436,13 @@ body {
 	content: "";
 	clear: both;
 	display: table;
+}
+
+#section7 {
+	background-image: url('http://cdn.shopify.com/s/files/1/2805/9732/files/img11_b4189267-b686-4150-b485-e10c1adfdd49.jpg?v=1517400659');
+	width: 100%;
+	height: 700px;
+	background-size: cover;
 }
 
 
