--- a/helper.css
+++ b/helper.css
@@ -536,6 +536,45 @@ body {
 
 }
 
+.circle-list li {
+
+	display: inline-block;
+	height: 5px;
+	width: 5px;
+	border-radius: 100%;
+	border: 1.5px solid #f6ab4a;
+	padding: 4px;
+	margin-right: 1em;
+
+}
+
+.actice-list-active {
+	background-color: #7e4c4f; 
+}
+
+.circle-list li:hover {
+	background-color: #7e4c4f; 
+}
+
+#img-bgc {
+
+	background-image: url('http://cdn.shopify.com/s/files/1/2805/9732/files/img4.jpg?v=1517642979');
+	width: 100%;
+	height: 44em;
+	background-size: cover;
+	background-attachment: fixed;
+	background-position:center;
+  	background-repeat :no-repeat ; 
+}
+
+.inline-format>* {
+	display: inline-block;
+}
+
+.dev-info {
+	display: inline-block;
+}
+
 
 /*Extra small*/
 @media (min-width: 320px){
